--- a/themes/bstrap_child/templates/menu/menu--custom-main-menu.html.twig
+++ b/themes/bstrap_child/templates/menu/menu--custom-main-menu.html.twig
@@ -45,8 +45,11 @@
         ]
       %}
       {% if menu_level == 0 and item.is_expanded %}
-        <li{{ item.attributes.addClass(item_classes) }}>
-        <a href="{{ item.url }}" class="dropdown-toggle" data-target="#" data-toggle="dropdown">{{ item.title }} <span class="caret"></span></a>
+        {#
+          From https://www.drupal.org/node/2903656
+          Removing data-target solves this issue.
+        #}
+        <a href="{{ item.url }}" class="dropdown-toggle" data-toggle="dropdown">{{ item.title }} <span class="caret"></span></a>
       {% else %}
         <li{{ item.attributes.addClass(item_classes) }}>
         {{ link(item.title, item.url) }}
