--- a/themes/custom/bstrap_child/css/jquery-ui-1.13.2/jquery-ui.theme.css
+++ b/themes/custom/bstrap_child/css/jquery-ui-1.13.2/jquery-ui.theme.css
@@ -1,5 +1,5 @@
 /*!
- * jQuery UI CSS Framework 1.12.1
+ * jQuery UI CSS Framework 1.13.2
  * http://jqueryui.com
  *
  * Copyright jQuery Foundation and other contributors
@@ -8,7 +8,7 @@
  *
  * http://api.jqueryui.com/category/theming/
  *
- * To view and modify this theme, visit http://jqueryui.com/themeroller/?scope=&folderName=custom-theme&bgImgOpacityHeader=35&bgImgOpacityContent=50&bgImgOpacityDefault=60&bgImgOpacityHover=100&bgImgOpacityActive=75&bgImgOpacityHighlight=55&bgImgOpacityError=55&cornerRadiusShadow=0pxdow&offsetLeftShadow=-4px&offsetTopShadow=-4px&thicknessShadow=4px&opacityShadow=60&bgImgOpacityShadow=0&bgTextureShadow=flat&bgColorShadow=%23aaaaaa&opacityOverlay=80&bgImgOpacityOverlay=0&bgTextureOverlay=flat&bgColorOverlay=%23eeeeee&iconColorError=%23fbc856&fcError=%23ffffff&borderColorError=%23c0402a&bgTextureError=flat&bgColorError=%23c0402a&iconColorHighlight=%2362453d&fcHighlight=%23444444&borderColorHighlight=%23ffffff&bgTextureHighlight=flat&bgColorHighlight=%23eeeeee&iconColorActive=%23454545&fcActive=%23ffffff&borderColorActive=%23999999&bgTextureActive=inset_hard&bgColorActive=%23999999&iconColorHover=%2362453d&fcHover=%2362453d&borderColorHover=%2362453d&bgTextureHover=glass&bgColorHover=%23f8f8f8&iconColorDefault=%2362453d&fcDefault=%2362453d&borderColorDefault=%23cccccc&bgTextureDefault=glass&bgColorDefault=%23eeeeee&iconColorContent=%23999999&fcContent=%23333333&borderColorContent=%23aaaaaa&bgTextureContent=inset_soft&bgColorContent=%23ffffff&iconColorHeader=%23999999&fcHeader=%23444444&borderColorHeader=%23bbbbbb&bgTextureHeader=glass&bgColorHeader=%23dddddd&cornerRadius=6px&fwDefault=bold&fsDefault=1.1em&ffDefault='Open%20Sans'%2C%20sans-serif
+ * To view and modify this theme, visit http://jqueryui.com/themeroller/?scope=&folderName=custom-theme&bgImgOpacityError=55&bgImgOpacityHighlight=55&bgImgOpacityActive=75&bgImgOpacityHover=100&bgImgOpacityDefault=60&bgImgOpacityContent=50&bgImgOpacityHeader=35&cornerRadiusShadow=0pxdow&offsetLeftShadow=-4px&offsetTopShadow=-4px&thicknessShadow=4px&opacityShadow=60&bgImgOpacityShadow=0&bgTextureShadow=flat&bgColorShadow=%23aaaaaa&opacityOverlay=80&bgImgOpacityOverlay=0&bgTextureOverlay=flat&bgColorOverlay=%23eeeeee&iconColorError=%23fbc856&fcError=%23ffffff&borderColorError=%23c0402a&bgTextureError=flat&bgColorError=%23c0402a&iconColorHighlight=%2362453d&fcHighlight=%23444444&borderColorHighlight=%23ffffff&bgTextureHighlight=flat&bgColorHighlight=%23eeeeee&iconColorActive=%23454545&fcActive=%23ffffff&borderColorActive=%23999999&bgTextureActive=inset_hard&bgColorActive=%23999999&iconColorHover=%2362453d&fcHover=%2362453d&borderColorHover=%2362453d&bgTextureHover=glass&bgColorHover=%23f8f8f8&iconColorDefault=%2362453d&fcDefault=%2362453d&borderColorDefault=%23cccccc&bgTextureDefault=glass&bgColorDefault=%23eeeeee&iconColorContent=%23999999&fcContent=%23333333&borderColorContent=%23aaaaaa&bgTextureContent=inset_soft&bgColorContent=%23ffffff&iconColorHeader=%23999999&fcHeader=%23444444&borderColorHeader=%23bbbbbb&bgTextureHeader=glass&bgColorHeader=%23dddddd&cornerRadius=6px&fwDefault=bold&fsDefault=1.1em&ffDefault='Open%20Sans'%2C%20sans-serif
  */
 
 
@@ -172,18 +172,18 @@ a.ui-button:active,
 .ui-widget-content .ui-priority-secondary,
 .ui-widget-header .ui-priority-secondary {
 	opacity: .7;
-	filter:Alpha(Opacity=70); /* support: IE8 */
+	-ms-filter: "alpha(opacity=70)"; /* support: IE8 */
 	font-weight: normal;
 }
 .ui-state-disabled,
 .ui-widget-content .ui-state-disabled,
 .ui-widget-header .ui-state-disabled {
 	opacity: .35;
-	filter:Alpha(Opacity=35); /* support: IE8 */
+	-ms-filter: "alpha(opacity=35)"; /* support: IE8 */
 	background-image: none;
 }
 .ui-state-disabled .ui-icon {
-	filter:Alpha(Opacity=35); /* support: IE8 - See #6059 */
+	-ms-filter: "alpha(opacity=35)"; /* support: IE8 - See #6059 */
 }
 
 /* Icons
@@ -224,7 +224,10 @@ a.ui-button:active,
 }
 
 /* positioning */
-.ui-icon-blank { background-position: 16px 16px; }
+/* Three classes needed to override `.ui-button:hover .ui-icon` */
+.ui-icon-blank.ui-icon-blank.ui-icon-blank {
+	background-image: none;
+}
 .ui-icon-caret-1-n { background-position: 0 0; }
 .ui-icon-caret-1-ne { background-position: -16px 0; }
 .ui-icon-caret-1-e { background-position: -32px 0; }
@@ -435,7 +438,7 @@ a.ui-button:active,
 .ui-widget-overlay {
 	background: #eeeeee;
 	opacity: .8;
-	filter: Alpha(Opacity=80); /* support: IE8 */
+	-ms-filter: Alpha(Opacity=80); /* support: IE8 */
 }
 .ui-widget-shadow {
 	-webkit-box-shadow: -4px -4px 4px #aaaaaa;
